Chenges to work around binary download block from institution. init script for database added to set up dependencies in container.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,9 +44,10 @@ services:
     restart: always
 
   oceexp-db:
-    build:
-      context: .  
-      dockerfile: dockerfiles/postgres.Dockerfile  # Custom PostGIS + H3 build
+    image: postgres:16
+    #build:
+    #  context: .  
+    #  dockerfile: dockerfiles/postgres.Dockerfile  # Custom PostGIS + H3 build
     ports:
       - "5433:5432"
     environment:
@@ -60,6 +61,12 @@ services:
       interval: 10s
       retries: 5
       start_period: 5s
+    deploy:
+      resources:
+        limits:
+          cpus: "4.0"  # Limit CPU usage to 4 cores
+        reservations:
+          cpus: "2.0"  # Reserve 2 CPUs to ensure availability
 
   pgadmin:
     image: dpage/pgadmin4
