CSV alternative download test

--- a/.env_sample
+++ b/.env_sample
@@ -13,3 +13,6 @@ PGADMIN_DEFAULT_PASSWORD=admin
 
 _AIRFLOW_WWW_USER_USERNAME=airflow
 _AIRFLOW_WWW_USER_PASSWORD=airflow
+
+GBIF_USER=gbifusername
+GBIF_PWD=gbifpassword
