troubleshooting log problems with airflow

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -149,6 +149,10 @@ services:
       <<: *airflow-common-env
       DUMB_INIT_SETSID: "0"
     volumes:
+      - ${AIRFLOW_PROJ_DIR:-.}/dags:/opt/airflow/dags
+      - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/airflow/logs
+      - ${AIRFLOW_PROJ_DIR:-.}/config:/opt/airflow/config
+      - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins
       - ./data:/mnt/data  # Mount the shared volume at /mnt/data in the worker container
     restart: always
     depends_on:
