--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -106,7 +106,7 @@ services:
       - ./apps:/opt/spark-apps
       - ./sparkdata:/opt/spark-data
 
-  spark-worker-a: 
+  spark-worker: 
     image: spark:3.5.5-scala2.12-java17-ubuntu
     container_name: spark-worker-a
     ports: 
@@ -121,27 +121,6 @@ services:
       - SPARK_EXECUTOR_MEMORY=1G
       - SPARK_WORKLOAD=worker
       - SPARK_LOCAL_IP=spark-worker-a
-    depends_on: 
-      - spark-master
-    volumes:
-      - ./apps:/opt/spark-apps
-      - ./sparkdata:/opt/spark-data
-
-  spark-worker-b: 
-    image: spark:3.5.5-scala2.12-java17-ubuntu
-    container_name: spark-worker-b
-    ports: 
-      - "9090:8080"
-      - "7077:7077"
-    environment: 
-      - SPARK_MODE=worker 
-      - SPARK_MASTER_URL=spark://spark-master:7077
-      - SPARK_WORKER_CORES=1
-      - SPARK_WORKER_MEMORY=1G
-      - SPARK_DRIVER_MEMORY=1G
-      - SPARK_EXECUTOR_MEMORY=1G
-      - SPARK_WORKLOAD=worker
-      - SPARK_LOCAL_IP=spark-worker-b
     depends_on: 
       - spark-master
     volumes:
