--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,12 +61,12 @@ services:
       interval: 10s
       retries: 5
       start_period: 5s
-        #deploy:
-      #resources:
+    deploy:
+      resources:
         #limits:
           # cpus: "4.0"  # Limit CPU usage to 4 cores
-          #reservations:
-          # cpus: "2.0"  # Reserve 2 CPUs to ensure availability
+        reservations:
+          cpus: "4.0"  # Reserve 4 CPUs to ensure availability
 
   pgadmin:
     image: dpage/pgadmin4
@@ -173,12 +173,12 @@ services:
     <<: *airflow-common
     command: celery worker
     scale: 1
-      #deploy:
-      #resources:
+    deploy:
+      resources:
         #limits:
           #cpus: "4.0"  # Allocate 4 CPUs for the single worker
-          #reservations:
-          #cpus: "2.0"  # Reserve 2 CPUs for the worker to ensure it has sufficient resources
+        reservations:
+          cpus: "2.0"  # Reserve 2 CPUs for the worker to ensure it has sufficient resources
     healthcheck:
       test:
         - "CMD-SHELL"
